Fix inline form error size on mobile

--- a/app/assets/stylesheets/formtastic.css
+++ b/app/assets/stylesheets/formtastic.css
@@ -322,8 +322,12 @@ This stylesheet forms part of the Formtastic Rails Plugin
     display: block;
   }
 
+  .formtastic .inline-errors {
+    display: block;
+    margin: 0.5em 0 0 0;
+  }
+
   .formtastic .input .inline-hints {
-    color: #666;
     display: block;
     margin: 0.5em 0 0 0;
     width: 25em;
